[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "voronoiville"
description = "Fast Voronoi diagrams in Python, written in Rust"
repository = "https://github.com/pmbaumgartner/voronoiville"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/pmbaumgartner/voronoiville"
documentation = "https://github.com/pmbaumgartner/voronoiville"
repository = "https://github.com/pmbaumgartner/voronoiville"