[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "voronoiville"
description = "Fast Voronoi diagrams in Python, written in Rust"
repository = "https://github.com/pmbaumgartner/voronoiville"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"

]
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/pmbaumgartner/voronoiville"
documentation = "https://github.com/pmbaumgartner/voronoiville"
repository = "https://github.com/pmbaumgartner/voronoiville"